@@ -416,6 +416,14 @@ to &lt;javadoc&gt; using <tt>classpath</tt>, <tt>classpathref</tt> attributes or
     <td align="center" valign="top">No</td>
   </tr>
   <tr>
+    <td valign="top">failonwarning</td>
+    <td valign="top">Stop the buildprocess if a warning is emitted -
+    i.e. if javadoc's output contains the word "warning".  <em>since
+    Ant 1.9.4</em></td>
+    <td align="center" valign="top">all</td>
+    <td align="center" valign="top">No</td>
+  </tr>
+  <tr>
     <td valign="top">excludepackagenames</td>
     <td valign="top">comma separated list of packages you don't want
       docs for -- see also the nested <code>excludepackage</code> element.</td>
